[package]
name = "sigh"
description = "HTTP signature generation and verification for ActivityPub, using OpenSSL"
version = "0.1.0"
edition = "2021"
categories = ["crypto", "network-programming"]
keywords = ["http", "signatures", "activitypub"]
license = "MIT"
authors = ["Astro <astro@spaceboyz.net>"]

[dependencies]
http = "0.2"
nom = "7"
openssl = "0.10"
base64 = "0.13"
