[package]
name = "sigh"
description = "HTTP signature generation and verification for ActivityPub, using OpenSSL"
version = "1.0.1"
edition = "2021"
categories = ["cryptography", "network-programming"]
keywords = ["http", "signatures", "activitypub"]
license = "MIT"
authors = ["Astro <astro@spaceboyz.net>"]
repository = "https://github.com/astro/sigh"
documentation = "https://docs.rs/sigh"

[dependencies]
http = "0.2"
nom = "7"
openssl = "0.10"
base64 = "0.20"
thiserror = "1"
